Fixed broken link

--- a/licode/client-api.html
+++ b/licode/client-api.html
@@ -748,7 +748,7 @@ room.addEventListener("room-connected", function(evt){...});</pre>
               <ul>
                 <li><code>streamEvent.stream</code> is the problematic subscribe stream.</li>
                 <li><code>streamEvent.bandwidth</code> is the available bandwidth reported by that stream.</li>
-                <li><code>streamEvent.msg</code> the <em>status</em> of that stream, depends on the adaptation <a href="quality">scheme</a>. </li>
+                <li><code>streamEvent.msg</code> the <em>status</em> of that stream, depends on the adaptation <a href="#quality">scheme</a>. </li>
               </ul>
             </li>
             <li><em>stream-failed</em>: A stream has failed, either in the connection establishment or during the communication.</li>
