Correct Grammatical Issue

--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -149,7 +149,7 @@ N.API.getRoom(roomId, function(resp) {
 }, errorCallback);</pre>
 
           <h3>Delete Room</h3>
-          <p>And finally, for delete a determined room:</p>
+          <p>And finally, to delete a determined room:</p>
           <pre class="prettyprint linenums">
 var roomId = '30121g51113e74fff3115502';
 
