--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -198,7 +198,7 @@ N.API.createToken(roomId, name, role, function(token) {
             <h1>Users</h1>
           </div>
 
-          <p class="lead">A user User object represents a participant in a videoconference room.</p>
+          <p class="lead">A User object represents a participant in a videoconference room.</p>
 
           <p>A User object has the following properties:</p>
           <ul>
