--- a/licode/client-api.html
+++ b/licode/client-api.html
@@ -178,9 +178,9 @@ clientapi: true
           </table>
 
           <h3 id="hasAudio">Check if the stream has audio, video and/or data active</h3>
-          <p>You can check if the stream has audio, video and data activated by two functions.
+          <p>You can check if the stream has audio, video and/or data activated by these functions.
           <div class="bs-docs-example">
-            The function in line 1 checks the audio while the function in line 2 checks the video.
+            The function in line 1 checks the audio while the function in line 2 checks the video and the function in line 3 checks the data.
           </div>
 <pre class="prettyprint linenums">
 stream.hasAudio();
