--- a/licode/community.html
+++ b/licode/community.html
@@ -17,30 +17,35 @@ community: true
     <div class="container">
   <div class="marketing row-fluid">
         <div id="overview" class="span4">
-            <a href="http://github.com/ging/licode"><img src="assets/img/github.png" height="50"></a>
-            <br/>
-            <p class="lead"> Licode's development takes place at Github.</p>
-            <p> There you will find the issues tracker, wiki pages and pull requests. Explore <a href="http://github.com/ging/">GING profile</a> on github to check all the associated repositories</p>
+            <a href="http://github.com/ging/licode"><img src="assets/img/github.png" height="40"></a>
         </div>
 
         <div id="overview" class="span4">
-            <a href="http://groups.google.com/group/lynckia" target="_blank"><img class="contact_img" src="assets/img/googlegrouplogo.png" alt="Google Groups" height="50"></a>
-            <br/>
-            <p class="lead"> Licode's development takes place at Github.</p>
-            <p> The main Licode group is a great place to learn about how to get the most out of Licode.</p>
-            <form action="http://groups.google.com/group/lynckia/boxsubscribe">
-                <input type="email" name="email" placeholder="email"> 
-                <input type="submit" name="sub" value=" Subscribe to Lynckia group ">
-            </form>
+            <a href="http://discourse.lynckia.com/" target="_blank"><img class="contact_img" src="assets/img/discourselogo.png" alt="Discourse" height="40"></a>
         </div>
 
         <div id="overview" class="span4">
-            <a href="http://twitter.com/lynckia" target="_blank"><img class="contact_img" src="assets/img/twitter.png" alt="Twitter" height="50"></a>
-            <br/>
-            <p class="lead"> Watch out for last Licode news at Twitter.</p>
-            <a href="https://twitter.com/lynckia" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @lynckia</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            <a href="http://twitter.com/lynckia" target="_blank"><img class="contact_img" src="assets/img/twitter.png" alt="Twitter" height="40"></a>
         </div>
+
     </div>
+
+    <div class="marketing row-fluid">
+          <div id="overview" class="span4">
+              <p class="lead"> Licode's development takes place at Github.</p>
+              <p> There you will find the issues tracker, wiki pages and pull requests. Explore <a href="http://github.com/ging/">GING profile</a> on github to check all the associated repositories</p>
+          </div>
+
+          <div id="overview" class="span4">
+              <p class="lead"> The place where we talk about Licode.</p>
+              <p> The main Licode group is a great place to learn about how to get the most out of Licode.</p>
+          </div>
+
+          <div id="overview" class="span4">
+              <p class="lead"> Watch out for last Licode news at Twitter.</p>
+              <a href="https://twitter.com/lynckia" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @lynckia</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          </div>
+
+      </div>
 </div>
-    
