--- a/licode/install.html
+++ b/licode/install.html
@@ -41,7 +41,7 @@ install: true
           <div class="row-fluid marketing">
             <div class="span6">
               <img width="100px" src="assets/img/ubuntu.png"></img>
-              <h3>Ubuntu 12.04 LTS or 14.04 LTS</h3>
+              <h3>Ubuntu 14.04 LTS</h3>
               <p>Our recommendation is to install it in a clean installation.</p>
             </div>
             <div class="span6">
@@ -51,7 +51,7 @@ install: true
               <p>You will need: </p>
               <ul>
               <li>Xcode Command Line Tools</li>
-              <li>Node v0.10.X, we recommend using <a href=https://github.com/creationix/nvm">nvm</a> for your node versioning problems</li>
+              <li>Node v6, we recommend using <a href=https://github.com/creationix/nvm">nvm</a> for your node versioning problems</li>
               <li>Git</li>
               </ul>
             </div>
