js code, untested

--- a/extras/basic_example/public/index.html
+++ b/extras/basic_example/public/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    rtmp ditribution url: <input id="rtmpurl" type="text"><br>
     <button id="recordButton" onclick="startRecording()" disabled>Toggle Recording</button>
     <button id="testConnection" onclick="testConnection()">Test Connection</button>
     <button id="slideShowMode" onclick="toggleSlideShowMode()">Toggle Slide Show Mode</button>
