Added highchats to lib dir to serve it locally

--- a/extras/basic_example/public/quality_layers.html
+++ b/extras/basic_example/public/quality_layers.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Licode Quality Layers Graphs</title>
-    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script type="text/javascript" src="lib/highcharts.js"></script>
     <script type="text/javascript" src="erizo.js"></script>
     <script type="text/javascript" src="quality_layers.js"></script>
   </head>
