--- a/extras/basic_example/public/quality_layers.html
+++ b/extras/basic_example/public/quality_layers.html
@@ -7,6 +7,6 @@
   </head>
 
   <body>
-    <div id="chart" style="width:100%; height:400px; float:right;"></div>
+    <div id="chart" style="width: calc(100% - 640px); height:700px; float:right;"></div>
   </body>
 </html>
