Added Licode Days and Office Hours

--- a/licode/community.html
+++ b/licode/community.html
@@ -14,7 +14,7 @@ community: true
 </header>
 
 
-    <div class="container">
+<div class="container">
   <div class="marketing row-fluid">
         <div id="overview" class="span4">
             <a href="http://github.com/ging/licode"><img src="assets/img/github.png" height="40"></a>
@@ -28,24 +28,34 @@ community: true
             <a href="http://twitter.com/lynckia" target="_blank"><img class="contact_img" src="assets/img/twitter.png" alt="Twitter" height="40"></a>
         </div>
 
+  </div>
+
+  <div class="marketing row-fluid">
+        <div id="overview" class="span4">
+            <p class="lead"> Licode's development takes place at Github.</p>
+            <p> There you will find the issues tracker, wiki pages and pull requests. Explore <a href="http://github.com/ging/">GING profile</a> on github to check all the associated repositories</p>
+        </div>
+
+        <div id="overview" class="span4">
+            <p class="lead"> The place where we talk about Licode.</p>
+            <p> The main Licode group is a great place to learn about how to get the most out of Licode.</p>
+        </div>
+
+        <div id="overview" class="span4">
+            <p class="lead"> Watch out for last Licode news at Twitter.</p>
+            <a href="https://twitter.com/lynckia" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @lynckia</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+
     </div>
-
-    <div class="marketing row-fluid">
-          <div id="overview" class="span4">
-              <p class="lead"> Licode's development takes place at Github.</p>
-              <p> There you will find the issues tracker, wiki pages and pull requests. Explore <a href="http://github.com/ging/">GING profile</a> on github to check all the associated repositories</p>
-          </div>
-
-          <div id="overview" class="span4">
-              <p class="lead"> The place where we talk about Licode.</p>
-              <p> The main Licode group is a great place to learn about how to get the most out of Licode.</p>
-          </div>
-
-          <div id="overview" class="span4">
-              <p class="lead"> Watch out for last Licode news at Twitter.</p>
-              <a href="https://twitter.com/lynckia" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @lynckia</a>
-              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          </div>
-
-      </div>
 </div>
+<header class="jumbotron subhead" id="overview">
+  <div class="container">
+    <h2>Licode Days</h2>
+    <p class="">Licode Days will happen <b>every 3/4 months</b> and we expect people to connect and talk about their projects, and give us feedback about Licode.</p>
+    <p class="">We will also update the Roadmap for the next months and will report any interesting news about the community</p>
+    <h2>Office Hours</h2>
+    <p class="">Licode admins set one hour every week for public office hours. Office hours are hosted on a <a href="https://hangouts.google.com/call/GlM1eo7bEEZgSM8Lolp5AAEI" class="normal">Hangouts Meeting</a> on <b>Wednesdays at 16:00 (CEST)</b>. Our idea is to answer questions about Licode or discuss open Pull Requests.</p>
+    <p class="">Topics for the Office Hours may include Pull Requests, questions about how Licode works or to report bugs</p>
+  </div>
+</header>
